[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 335.0
margin_top = 161.0
margin_right = 875.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 2 )
text = "Failed to connect to server :("
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pop_Hide_Timer" type="Timer" parent="Label"]
process_mode = 0
one_shot = true

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 0.803922 )

[node name="HSplitContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 331.0
margin_top = 227.0
margin_right = 948.0
margin_bottom = 493.0
custom_constants/separation = 17

[node name="GridContainer2" type="GridContainer" parent="CenterContainer/HSplitContainer"]
margin_right = 300.0
margin_bottom = 266.0

[node name="Label" type="Label" parent="CenterContainer/HSplitContainer/GridContainer2"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Lobby"
align = 1
valign = 1

[node name="Name" type="LineEdit" parent="CenterContainer/HSplitContainer/GridContainer2"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 104.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Enter name..."

[node name="IP" type="LineEdit" parent="CenterContainer/HSplitContainer/GridContainer2"]
margin_top = 108.0
margin_right = 300.0
margin_bottom = 158.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Server IP..."

[node name="Join" type="Button" parent="CenterContainer/HSplitContainer/GridContainer2"]
margin_top = 162.0
margin_right = 300.0
margin_bottom = 212.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="Host" type="Button" parent="CenterContainer/HSplitContainer/GridContainer2"]
margin_top = 216.0
margin_right = 300.0
margin_bottom = 266.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Host"

[node name="GridContainer" type="GridContainer" parent="CenterContainer/HSplitContainer"]
margin_left = 317.0
margin_right = 617.0
margin_bottom = 230.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 30

[node name="Label" type="Label" parent="CenterContainer/HSplitContainer/GridContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Player Colour"
align = 1
valign = 1

[node name="HSplitContainer" type="VBoxContainer" parent="CenterContainer/HSplitContainer/GridContainer"]
margin_left = 100.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 230.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 4
custom_constants/separation = 10
alignment = 1

[node name="Red" type="Button" parent="CenterContainer/HSplitContainer/GridContainer/HSplitContainer"]
self_modulate = Color( 1, 0.960784, 0, 1 )
margin_right = 100.0
margin_bottom = 43.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="ColorRect3" type="ColorRect" parent="CenterContainer/HSplitContainer/GridContainer/HSplitContainer/Red"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 97.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 2
color = Color( 1, 0, 0, 1 )

[node name="Green" type="Button" parent="CenterContainer/HSplitContainer/GridContainer/HSplitContainer"]
self_modulate = Color( 1, 0.960784, 0, 1 )
margin_top = 53.0
margin_right = 100.0
margin_bottom = 96.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="ColorRect3" type="ColorRect" parent="CenterContainer/HSplitContainer/GridContainer/HSplitContainer/Green"]
margin_right = 97.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 2
color = Color( 0.219608, 1, 0, 1 )

[node name="Blue" type="Button" parent="CenterContainer/HSplitContainer/GridContainer/HSplitContainer"]
self_modulate = Color( 1, 0.960784, 0, 1 )
margin_top = 106.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="CenterContainer/HSplitContainer/GridContainer/HSplitContainer/Blue"]
margin_right = 97.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 2
color = Color( 0, 0.0392157, 1, 1 )
[connection signal="text_changed" from="CenterContainer/HSplitContainer/GridContainer2/Name" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="CenterContainer/HSplitContainer/GridContainer2/IP" to="." method="_on_IP_text_changed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/GridContainer2/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/GridContainer2/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/GridContainer/HSplitContainer/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/GridContainer/HSplitContainer/Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/GridContainer/HSplitContainer/Blue" to="." method="_on_Blue_pressed"]
